--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "jquery": "~2",
     "bootstrap-sass": "~3.3.5",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "nette.ajax.js": "~2.1.0"
   }
 }
