--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,6 @@
     "bootstrap-sass": "~3.3.5",
     "underscore": "~1.8.3",
     "nette.ajax.js": "~2.1.0",
-    "datatables": "~1.10"
+    "datatables": "1.10.9"
   }
 }
